--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                   <a class="nav-link" href="index_gallery.html">Gallery <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Experience <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index_experience.html">Experience <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="#">About Me <span class="sr-only">(current)</span></a>
@@ -41,8 +41,8 @@
          <div class="jumbotron jumbotron-fluid bg-home">
              <div class="container">
                 <div class="container-j">
-                    <h1 class="text-center">"RISE ABOVE THE STORM AND YOU WILL FIND THE SUNSHINE"</h1>
-                    <p class="text-center">-Life hacks</p>
+                    <h1 class="text-center">"You have the power over your <b><em>mind</em></b> not <b><em>outside events</em></b>. Realize this and you will find strength"</h1>
+                    <p class="text-center">-Marcus Aurelius</p>
                     <hr class="text-center">
                 </p>
                 </div>
