--- a/index_gallery.html
+++ b/index_gallery.html
@@ -9,6 +9,10 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div class="bg-home">
+
+    </div>
     <header>
 
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -26,7 +30,7 @@
               <a class="nav-link" href="#">Gallery <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">Experience <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index_experience.html">Experience <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="#">About Me <span class="sr-only">(current)</span></a>
@@ -41,13 +45,11 @@
 
     </header>
 
+    
     <div class="container">
       <figure class="figure">
-        <img src="img/img10.jpg" class="figure-img img-fluid rounded" alt="...">
-        <figcaption class="figure-caption">A caption for the above image.</figcaption>
+        <img src="img/img10.jpg" class="figure-img img-fluid" alt="...">
       </figure>
-    </div>
-    <div class="container">
       <hr class="text-center">
 
       <div class="row">
@@ -100,7 +102,7 @@
       <div class="card-footer text-muted">
           <p class="text-center1">Copyright &copy; 2020 My Website</p>
           </div>
-  </footer>
+    </footer>
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.bundle.js"></script>
     <script src="js/bootstrap.min.js"></script>
