--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style-home.css">
+    <title>HOME</title>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">I R O C W E B S I T E</a>
+            <a class="navbar-brand" href="#">I R O C  W E B S I T E</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
           
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
+              <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
@@ -29,16 +30,16 @@
                   <a class="nav-link" href="index_experience.html">Experience <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">About Me <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index_about_me.html">About Me <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Contact Me <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index_contact_me.html">Contact Me <span class="sr-only">(current)</span></a>
                 </li>
               </ul>
               
             </div>
           </nav>
-         <div class="jumbotron jumbotron-fluid bg-home">
+         <div class="jumbotron jumbotron-fluid bg-nav">
              <div class="container">
                 <div class="container-j">
                     <h1 class="text-center">"You have the power over your <b><em>mind</em></b> not <b><em>outside events</em></b>. Realize this and you will find strength"</h1>
