--- a/index_experience.html
+++ b/index_experience.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EXPERIENCE</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style-exp.css">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-brand" href="#">I R O C W E B S I T E</a>
+          <a class="navbar-brand" href="#">I R O C  W E B S I T E</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
         
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
                 <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
               </li>
@@ -27,10 +28,10 @@
                 <a class="nav-link" href="#">Experience <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="#">About Me <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index_about_me.html">About Me <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="#">Contact Me <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index_contact_me.html">Contact Me <span class="sr-only">(current)</span></a>
               </li>
             </ul>
           </div>
@@ -38,11 +39,11 @@
         
       </header>
 
+      <div class="jumbotron bg-nav">
+        <h1 class="display-4 color1">My Experiences</h1>
+        <p class="lead">This is a webpage about my experience using different language throughout my Student year studying Information Technology</p>
+    </div>
       <div class="container-exp">
-        <div class="jumbotron">
-            <h1 class="display-4">My Experiences</h1>
-            <p class="lead">This is a webpage about my experience using different language throughout my Student year studying Information Technology</p>
-        </div>
         <hr class="text-center">
         <div class="row">
             <div class="col">
@@ -64,11 +65,14 @@
         </div>
         <hr class="text-center">
       </div>
-      <footer>
-        <div class="card-footer text-muted">
-            <p class="text-center1">Copyright &copy; 2020 My Website</p>
-            </div>
+      <div class="container-space">
+        <footer>
+          <div class="card-footer text-muted">
+              <p class="text-center1">Copyright &copy; 2020 My Website</p>
+              </div>
       </footer>
+      </div>
+
       <script src="js/jquery.min.js"></script>
       <script src="js/bootstrap.bundle.js"></script>
       <script src="js/bootstrap.min.js"></script>
