--- a/index_about_me.html
+++ b/index_about_me.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ABOUT</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style-about.css">
     
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -46,21 +47,20 @@
     <br/>
     <br/>
 
-    <div class="container">
-        <div class="row">
-            
-            <div class="col">
-                <img src="img/img5.jpg" alt="..." class="img-thumbnail">
-            </div>
-            <div class="col"><p class="font-weight-bold text-center font-s1">WHO AM I?</p>
-                <p class="font-weight-normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sapiente officiis dolore accusantium, corrupti nulla, soluta repellendus velit obcaecati veritatis ut porro perspiciatis eius aspernatur sint explicabo accusamus debitis a?</p>
-                <p class="font-weight-normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sapiente officiis dolore accusantium, corrupti nulla, soluta repellendus velit obcaecati veritatis ut porro perspiciatis eius aspernatur sint explicabo accusamus debitis a?</p>
-                <p class="font-weight-normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sapiente officiis dolore accusantium, corrupti nulla, soluta repellendus velit obcaecati veritatis ut porro perspiciatis eius aspernatur sint explicabo accusamus debitis a?</p>
-                <p class="font-weight-normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sapiente officiis dolore accusantium, corrupti nulla, soluta repellendus velit obcaecati veritatis ut porro perspiciatis eius aspernatur sint explicabo accusamus debitis a?</p>
-                <p class="font-weight-normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sapiente officiis dolore accusantium, corrupti nulla, soluta repellendus velit obcaecati veritatis ut porro perspiciatis eius aspernatur sint explicabo accusamus debitis a?</p>
-            </div>
-        </div>
+    <div class="container-about">
+      <div class="block">
+        <img src="img/img5.jpg" alt="..." class="img-thumbnail">
+      </div>
+      <div class="block">
+        <p class="font-weight-bold text-center font-s1">WHO AM I?</p>
+        <p class="font-weight-normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sapiente officiis dolore accusantium, corrupti nulla, soluta repellendus velit obcaecati veritatis ut porro perspiciatis eius aspernatur sint explicabo accusamus debitis a?</p>
+        <p class="font-weight-normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sapiente officiis dolore accusantium, corrupti nulla, soluta repellendus velit obcaecati veritatis ut porro perspiciatis eius aspernatur sint explicabo accusamus debitis a?</p>
+        <p class="font-weight-normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sapiente officiis dolore accusantium, corrupti nulla, soluta repellendus velit obcaecati veritatis ut porro perspiciatis eius aspernatur sint explicabo accusamus debitis a?</p>
+        <p class="font-weight-normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sapiente officiis dolore accusantium, corrupti nulla, soluta repellendus velit obcaecati veritatis ut porro perspiciatis eius aspernatur sint explicabo accusamus debitis a?</p>
+        <p class="font-weight-normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum sapiente officiis dolore accusantium, corrupti nulla, soluta repellendus velit obcaecati veritatis ut porro perspiciatis eius aspernatur sint explicabo accusamus debitis a?</p>
+      </div>
     </div>
+    <div class="clr"></div>
 
     <div class="container-space">
       <footer>
