--- a/index_experience.html
+++ b/index_experience.html
@@ -42,29 +42,39 @@
       <div class="jumbotron bg-nav">
         <h1 class="display-4 color1">My Experiences</h1>
         <p class="lead">This is a webpage about my experience using different language throughout my Student year studying Information Technology</p>
-    </div>
-      <div class="container-exp">
-        <hr class="text-center">
-        <div class="row">
-            <div class="col">
-                <img src="img/java.png" alt="..." class="img-thumbnail">
-            </div>
-            <div class="col"><p class="font-weight-normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam minus autem fugit beatae quo. Nam iure nostrum voluptas voluptatum eos nemo ab tenetur, fugit quis necessitatibus repudiandae sint eaque perferendis!</p></div>
-            <div class="w-100"></div>
-            <hr class="text-center"/>
-            <div class="col"><p class="font-weight-normal">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis provident, temporibus labore aliquam, saepe aperiam maxime itaque iusto rerum unde similique nihil! Delectus eligendi beatae illum natus quas ipsam quia?</p></div>
-            <div class="col">
-                <img src="img/python1.png" alt="..." class="img-thumbnail">
-            </div>
-            <div class="w-100"></div>
-            <hr class="text-center"/>
-            <div class="col">
-                <img src="img/c.png" alt="..." class="img-thumbnail">
-            </div>
-            <div class="col"><p class="font-weight-normal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa amet quo impedit maxime molestiae. Id nesciunt laudantium, sint magnam fugit animi sapiente magni ipsa commodi fuga mollitia, rerum quam assumenda!</p></div>
-        </div>
-        <hr class="text-center">
       </div>
+      <div class="container-exp">
+        <div class="block">
+          <img src="img/java.png" alt="..." class="img-thumbnail">
+        </div>
+        <div class="block">
+          <p class="font-weight-normal">Java Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam minus autem fugit beatae quo. Nam iure nostrum voluptas voluptatum eos nemo ab tenetur, fugit quis necessitatibus repudiandae sint eaque perferendis!</p>
+          <p class="font-weight-normal">Java Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam minus autem fugit beatae quo. Nam iure nostrum voluptas voluptatum eos nemo ab tenetur, fugit quis necessitatibus repudiandae sint eaque perferendis!</p>
+        </div>
+        <div class="clr"></div>
+        <div class="container-python">
+          <div class="block posy">
+            <p class="font-weight-normal">PYthon Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam minus autem fugit beatae quo. Nam iure nostrum voluptas voluptatum eos nemo ab tenetur, fugit quis necessitatibus repudiandae sint eaque perferendis!</p>
+            <p class="font-weight-normal">PYthon Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam minus autem fugit beatae quo. Nam iure nostrum voluptas voluptatum eos nemo ab tenetur, fugit quis necessitatibus repudiandae sint eaque perferendis!</p>
+            <p class="font-weight-normal">PYthon Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam minus autem fugit beatae quo. Nam iure nostrum voluptas voluptatum eos nemo ab tenetur, fugit quis necessitatibus repudiandae sint eaque perferendis!</p>
+          </div>
+          <div class="block posx">
+            <img src="img/python1.png" alt="..." class="img-thumbnail">
+          </div>
+        </div>
+        <div class="clr"></div>
+        <div class="block">
+          <img src="img/c.png" alt="..." class="img-thumbnail">
+        </div>
+        <div class="block">
+          <p class="font-weight-normal">C Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam minus autem fugit beatae quo. Nam iure nostrum voluptas voluptatum eos nemo ab tenetur, fugit quis necessitatibus repudiandae sint eaque perferendis!</p>
+          <p class="font-weight-normal">C Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam minus autem fugit beatae quo. Nam iure nostrum voluptas voluptatum eos nemo ab tenetur, fugit quis necessitatibus repudiandae sint eaque perferendis!</p>
+          <p class="font-weight-normal">C Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam minus autem fugit beatae quo. Nam iure nostrum voluptas voluptatum eos nemo ab tenetur, fugit quis necessitatibus repudiandae sint eaque perferendis!</p>
+
+        </div>
+      </div>
+      <div class="clr"></div>
+
       <div class="container-space">
         <footer>
           <div class="card-footer text-muted">
